# blue-music

./: Cargo.toml  Cross.toml  README.md
src/: cmdline_old.txt  flac.rs  main.rs  player.rs  playlist.rs  playlist_old_2.txt  song.rs  temp.txt
