[package]
name = "blue-music"
version = "0.1.0"
authors = ["Dulhan <dhjayalath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.9.0"
walkdir = "2.2.8"
lazy_static = "1.3.0"
text_io = "0.1.7"
metaflac = "0.1.8"
rand = "0.7.0"