[package]
name = "blue-music"
version = "0.1.2"
authors = ["Dulhan <dhjayalath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.2"
cpal = "0.9.0"
claxon = "0.4.2"
walkdir = "2.2.9"
metaflac = "0.1.8"
gtk = "0.6.0"
gdk-pixbuf = "0.6.0"
gdk-pixbuf-sys = "0.8.0"
gtk-sys = "0.8.0"
relm = "^0.16.0"
relm-derive = "0.17.0"
m3u = "1.0.0"
pulse-simple = "1.0.1"